--- a/unit-testing/unit-testing/src/main/resources/test-application.properties
+++ b/unit-testing/unit-testing/src/main/resources/test-application.properties
@@ -1,4 +1,4 @@
 logging.level.org.springframework.web.servlet.mvc.method.annotation=TRACE
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
-server.port = 8082
+logging.level.org.springframework.web=DEBUG
